--- a/TSAHandset/Views/Home/Index.cshtml
+++ b/TSAHandset/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
 <div class="jumbotron">
    <div class="row">
        <div class="col-md-6">
-           <a href="#" class="btn  btn-raised btn-danger"> <i class="material-icons">grade</i><br />
+           <a href="#" class="btn  btn-raised btn-danger">
+           <i class="material-icons">description</i><br />
            New Request
            
            </a>
@@ -13,7 +14,7 @@
        </div>
        <div class="col-md-6">
            <a href="#" class="btn  btn-raised btn-danger">
-               <i class="material-icons">grade</i><br />
+               <i class="material-icons">feedback</i><br />
                Pending Request
 
            </a>
