Added Request Submission Page

--- a/TSAHandset/Views/Home/Index.cshtml
+++ b/TSAHandset/Views/Home/Index.cshtml
@@ -4,15 +4,15 @@
 
 <div class="jumbotron">
    <div class="row">
-       <div class="col-md-6">
-           <a href="#" class="btn  btn-raised btn-danger">
+       <div class="col-md-6" style="text-align:center">
+           <a href="/Request/New" class="btn  btn-raised btn-danger">
            <i class="material-icons">description</i><br />
            New Request
            
            </a>
 
        </div>
-       <div class="col-md-6">
+       <div class="col-md-6" style="text-align:center">
            <a href="#" class="btn  btn-raised btn-danger">
                <i class="material-icons">feedback</i><br />
                Pending Request
