--- a/TSAHandset/Content/Site.css
+++ b/TSAHandset/Content/Site.css
@@ -34,3 +34,9 @@ textarea {
 .sidebarLogo{
     margin:auto;
 }
+
+.radio{
+    color:red;
+    padding-top:0px!important;
+    margin-bottom:0px!important;
+}
