--- a/TSAHandset/Views/Home/Index.cshtml
+++ b/TSAHandset/Views/Home/Index.cshtml
@@ -12,13 +12,10 @@
            </a>
 
        </div>
-       <div class="col-md-6" style="text-align:center">
-           <a href="#" class="btn  btn-raised btn-danger">
-               <i class="material-icons">feedback</i><br />
-               Pending Request
+       <div class="col-md-6">
 
-           </a>
        </div>
+       
    </div>
     
 </div>
