--- a/TSAHandset/Views/Home/AdminIndex.cshtml
+++ b/TSAHandset/Views/Home/AdminIndex.cshtml
@@ -17,9 +17,9 @@
 
         </div>
         <div class="col-md-6" style="text-align:center">
-            <a href="#" class="btn btn-block btn-raised btn-danger">
+            <a href="#" class="btn btn-block btn-raised btn-danger" onclick="showSection('accepted')">
                 <i class="material-icons">feedback</i><br />
-                Pending Request
+                My Request
 
             </a>
         </div>
@@ -243,6 +243,61 @@
     </div>
 </div>
 
+<!-- SECTION - user request -->
+<div class="row" id="userRequestsSection">
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>My Requests</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <table id="userRequestsTable" class="table table-striped table-hover">
+                    <thead>
+                    <th>Name</th>
+                    <th>Requested Date</th>
+                    <th>Aporoved/rejected Date</th>
+                    <th>Status</th>
+                    <th>Action</th>
+                    </thead>
+                    <tbody>
+                        @foreach (var requst in Model.UserRequests)
+                        {
+                          
+                                <tr>
+                                    <td>@requst.RequestUserName</td>
+                                    <td>@requst.RequestDate.ToShortDateString()</td>
+                                    <td>@if (requst.ApprovedDate != null) { requst.ApprovedDate.Value.ToShortDateString(); }</td>
+                                    <td>@requst.Progress.ProgressLevelName</td>
+                                    <td>
+
+
+
+
+                                        <span class="input-group-btn">
+                                            <button type="button" id="approveRequest" data-id="@requst.Id" onclick="requestAction(this)" class="btn btn-xs btn-success" data-toggle="modal" data-target="#accept-request-dialog">
+                                                <i class="material-icons">thumb_up</i> Approve
+                                            </button>
+
+                                            <button type="button" id="rejectRequest" data-id="@requst.Id" onclick="requestAction(this)" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#reject-request-dialog">
+                                                <i class="material-icons">thumb_down</i> Reject
+                                            </button>
+                                        </span>
+                                    </td>
+                                </tr>
+                            
+                        }
+
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- accept action modal-->
 <div id="accept-request-dialog" class="modal fade" tabindex="-1" style="display: none;">
@@ -327,6 +382,7 @@
             $("#allRequestsSection").hide();
             $("#pendingRequestsSection").hide();
             $("#acceptedRequestsSection").hide();
+            $("#userRequestsSection").hide();
         });
 
         function requestAction(el) {
@@ -342,6 +398,7 @@
                     $("#allRequestsSection").show(200);
                     $("#pendingRequestsSection").hide(200);
                     $("#acceptedRequestsSection").hide(200);
+                    $("#userRequestsSection").hide(200);
 
                     
                     break;
@@ -349,15 +406,22 @@
                     $("#allRequestsSection").hide(200);
                     $("#pendingRequestsSection").show(200);
                     $("#acceptedRequestsSection").hide(200);
+                    $("#userRequestsSection").hide(200);
 
                     break;
                 case 'accepted':
                     $("#allRequestsSection").hide(200);
                     $("#pendingRequestsSection").hide(200);
                     $("#acceptedRequestsSection").show(200);
+                    $("#userRequestsSection").hide(200);
 
                     break;
-
+                case 'user':
+                    $("#allRequestsSection").hide(200);
+                    $("#pendingRequestsSection").hide(200);
+                    $("#acceptedRequestsSection").hide(200);
+                    $("#userRequestsSection").show(200);
+                    break;
             }
         }
         
