--- a/TSAHandset/Views/Home/Index.cshtml
+++ b/TSAHandset/Views/Home/Index.cshtml
@@ -1,25 +1,93 @@
-﻿@{
+﻿@model TSAHandset.ViewModel.HomeViewModel
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
    <div class="row">
        <div class="col-md-6" style="text-align:center">
-           <a href="/Request/New" class="btn  btn-raised btn-danger">
+           <a href="/Request/New" class="btn  btn-raised btn-danger btn-block">
            <i class="material-icons">description</i><br />
            New Request
            
            </a>
 
        </div>
-       <div class="col-md-6">
+       
+        <div class="col-md-6" style="text-align:center">
+            <a href="#" class="btn btn-block btn-raised btn-danger" onclick="showSection('user')">
+                <i class="material-icons">feedback</i><br />
+                My Request
 
-       </div>
+            </a>
+        </div>
+     
        
    </div>
     
 </div>
 
-<div class="row">
-    
+
+<!-- SECTION - user request -->
+<div class="row" id="userRequestsSection">
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>My Requests</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <table id="userRequestsTable" class="table table-striped table-hover">
+                    <thead>
+                    <th>Name</th>
+                    <th>Requested Date</th>
+                    <th>Aporoved/rejected Date</th>
+                    <th>Status</th>
+                  
+                    </thead>
+                    <tbody>
+                        @foreach (var requst in Model.UserRequests)
+                        {
+                            if (requst.ProgressId == 1)
+                            {
+                                <tr>
+                                    <td>@requst.RequestUserName</td>
+                                    <td>@requst.RequestDate.ToShortDateString()</td>
+                                    <td>@if (requst.ApprovedDate != null) { requst.ApprovedDate.Value.ToShortDateString(); }</td>
+                                    <td>@requst.Progress.ProgressLevelName</td>
+                                   
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
+
+@section scripts{
+    <script>
+        $(document).ready(function () {
+            //hiding the sections on initial load
+            $("#userRequestsSection").hide();
+
+
+        });
+
+
+        function showSection(section, el) {
+            switch (section) {
+                case 'user':
+                    $("#allRequestsSection").hide(200);
+                    $("#pendingRequestsSection").hide(200);
+                    $("#acceptedRequestsSection").hide(200);
+                    $("#userRequestsSection").show(200);
+                    break;
+
+            }
+        }
+    </script>
+}
