--- a/TSAHandset/Views/Shared/_Layout.cshtml
+++ b/TSAHandset/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -15,11 +16,7 @@
 </head>
 <body>
     @Html.Partial("_Navbar")
-    <div class="col-md-3 mainSideBar hidden-sm hidden-xs">
-        &nbsp;
-        
-        <img class="img-responsive sidebarLogo" src="~/Images/tsa.png" />
-    </div>
+    @Html.Partial("_Sidebar")
     <div class="col-md-3">
 
     </div>
@@ -28,7 +25,7 @@
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+                <p>&copy; @DateTime.Now.Year -TSA Handset Application</p>
             </footer>
         </div>
     </div>
