--- a/TSAHandset/Views/Shared/_LoginPartial.cshtml
+++ b/TSAHandset/Views/Shared/_LoginPartial.cshtml
@@ -1,10 +1,12 @@
-﻿@if (Request.IsAuthenticated)
+﻿@model TSAHandset.ViewModel.BaseViewModel
+@if (Request.IsAuthenticated)
 {
     <text>
          <ul class="nav navbar-nav navbar-right">
-            <li>
-                @Html.ActionLink("Hello " + User.Identity.Name + "!", "Index", "UserProfile", routeValues: null, htmlAttributes: null)
-            </li>
+
+             <li>
+                 @Html.ActionLink("Hello " + ((Model.User.DisplayName!="")? Model.User.DisplayName:Model.User.UserPrincipalName )+ " !", "Index", "UserProfile", routeValues: null, htmlAttributes: null)
+             </li>
             <li>
                 @Html.ActionLink("Sign out", "SignOut", "Account")
             </li>
