--- a/TSAHandset/Views/Request/New.cshtml
+++ b/TSAHandset/Views/Request/New.cshtml
@@ -54,13 +54,28 @@
 
                             <div class="panel panel-default">
                                 <div class="panel-body">
-                                    <div class="col-sm-3">
-
+                                    <div class="col-sm-5">
+                                        <img class="img-responsive" src="@handset.ImageUrl"/>
                                     </div>
-                                    <div class="col-sm-9">
+                                    <div class="col-sm-7">
                                         <h3>@handset.Make</h3>
                                         <h4>@handset.Model</h4>
-                                        <a href="#" class="btn btn-xs btn-danger"><i class="material-icons">tune</i> View Specs</a>
+                                        <a onclick="initHandsetInfoDialog(this)" data-toggle="modal" data-target="#handset-info-dialog" href="#" class="btn btn-xs btn-danger"
+                                           data-image-url="@handset.ImageUrl"
+                                           data-make="@handset.Make"
+                                           data-model="@handset.Model"
+                                           data-Os="@handset.OS"
+                                           data-screen-size="@handset.ScreenSizeInIn"
+                                           data-processor="@handset.Processor"
+                                           data-width="@handset.WidthInMM"
+                                           data-height="@handset.HeightInMM"
+                                           data-thickness="@handset.ThicknessInMM"
+                                           data-memory="@handset.MemoryInGB"
+                                           data-storage="@handset.StorageInGB"
+                                           data-camera="@handset.CameraInMP"
+                                           
+                                           
+                                           ><i class="material-icons" >tune</i> View Specs</a>
                                     </div>
                                 </div>
                             </div>
@@ -161,8 +176,114 @@
    }
 </div>
 
+
+<!-- Handset Informations-->
+<div id="handset-info-dialog" class="modal fade" tabindex="-1" style="display: none;">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title" id="handsetDialogTitle"></h4>
+            </div>
+            <div class="modal-body">
+                <p>
+                    <div class="col-xs-12">
+                        <div class="col-xs-4">
+                            <img class="img-responsive" id="handsetImage" src=""/>
+
+                        </div>
+                        <div class="col-xs-8" style="">
+                            <div style="">
+                            
+                            
+                            <table>
+                                <tr>
+                                    <td>Make</td>
+                                    <td> : </td>
+                                    <td id="handsetMake"></td>
+                                </tr>
+                                <tr>
+                                    <td>Model</td>
+                                    <td> : </td>
+                                    <td id="handsetModel"></td>
+                                </tr>
+                                <tr>
+                                    <td>Dimensions </td>
+                                    <td> : </td>
+                                    <td id="handsetDimensions"></td>
+                                </tr>
+                                <tr>
+                                    <td>Screen</td>
+                                    <td> : </td>
+                                    <td id="handsetScreen"></td>
+                                </tr>
+                                <tr>
+                                    <td>Memory</td>
+                                    <td> : </td>
+                                    <td id="handsetMemory"></td>
+                                </tr>
+                                <tr>
+                                    <td>Storage</td>
+                                    <td> : </td>
+                                    <td id="handsetStorage"></td>
+                                </tr>
+                                <tr>
+                                    <td>Camera</td>
+                                    <td> : </td>
+                                    <td id="handsetCamera"></td>
+                                </tr>
+                                <tr>
+                                    <td>Processor</td>
+                                    <td> : </td>
+                                    <td id="handsetProcessor"></td>
+                                </tr>
+                                <tr>
+                                    <td>OS</td>
+                                    <td> : </td>
+                                    <td id="handsetOs"></td>
+                                </tr>
+                            </table>
+                            
+                            </div>
+
+                        </div>
+                    </div>
+                </p>
+
+
+
+            </div>
+            <div class="modal-footer">
+                
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section scripts{ 
     <script>
+
+        function initHandsetInfoDialog(el) {
+            $("#handsetImage").attr("src", $(el).data("image-url"));
+
+
+            $("#handsetMake").html($(el).data("make"));
+            $("#handsetModel").html($(el).data("model"));
+            $("#handsetDimensions").html($(el).data("width") + "mm x " + $(el).data("height") + "mm x " + $(el).data("thickness") + " mm");
+            $("#handsetScreen").html($(el).data("screen-size") + "\"");
+            $("#handsetOs").html($(el).data("os"));
+            $("#handsetProcessor").html($(el).data("processor"));
+            $("#handsetDialogTitle").html($(el).data("make") + " " + $(el).data("model"));
+            $("#handsetMemory").html($(el).data("memory") + " GB");
+            $("#handsetStorage").html($(el).data("storage") + " GB");
+            $("#handsetCamera").html($(el).data("camera") + " MP");
+
+
+
+        }
+
+
         function changeRequestType(el) {
             
             switch ($(el)[0].value) {
