--- a/TSAHandset/Views/Shared/_Sidebar.cshtml
+++ b/TSAHandset/Views/Shared/_Sidebar.cshtml
@@ -8,6 +8,15 @@
 
        </div>
 
+       <div class="mainSideBarFlexDivMission">
+           <blockquote>
+
+               <p>
+                   Caring for people, transforming lives and reforming society through God in Christ by the Holy Spirit's power.
+               </p>
+               </blockquote>
+       </div>
+
        @if (Request.IsAuthenticated)
        {
         <div class="col-md-12 mainSideBarFlexDivUser">
