--- a/TSAHandset/Content/Site.css
+++ b/TSAHandset/Content/Site.css
@@ -43,12 +43,21 @@ textarea {
 .mainSideBarFlexDivLogo{
     flex:1;
 }
+.mainSideBarFlexDivMission {
+
+    flex:1;
+    color:white;
+    text-align:center;
+    font-size:.7em;
+}
+
 .mainSideBarFlexDivUser {
     color: #8385ef;
     flex: 2;
     text-align: center;
     font-size: 1.3em;
 }
+
 
 .sidebarLogo{
     margin:auto;
