--- a/TSAHandset/Views/Shared/_Layout.cshtml
+++ b/TSAHandset/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - TSA Handset</title>
     @Styles.Render("~/Content/dist")
     @Scripts.Render("~/bundles/modernizr")
     <!-- Material Design fonts -->
