--- a/TSAHandset/Views/Home/Index.cshtml
+++ b/TSAHandset/Views/Home/Index.cshtml
@@ -12,6 +12,20 @@
            
            </a>
 
+
+           @*<div class="btn-group" style="width:100%;height:100%">
+               <a href="bootstrap-elements.html" data-target="#" class="btn  btn-raised btn-danger btn-block dropdown-toggle" data-toggle="dropdown">
+                   <i class="material-icons">description</i><br />
+                   Dropdown
+                   <span class="caret"></span>
+               </a>
+               <ul class="dropdown-menu">
+                   <li><a href="javascript:void(0)">Dropdown link</a></li>
+                   <li><a href="javascript:void(0)">Dropdown link</a></li>
+                   <li><a href="javascript:void(0)">Dropdown link</a></li>
+               </ul>
+           </div>*@
+
        </div>
        
         <div class="col-md-6" style="text-align:center">
