--- a/TSAHandset/Views/Shared/_LoginPartial.cshtml
+++ b/TSAHandset/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
                  
            
              <li>
-                 @Html.ActionLink("Hello " + ((Model.User.DisplayName!="")? Model.User.DisplayName:Model.User.UserPrincipalName )+ " !", "Index", "UserProfile", routeValues: null, htmlAttributes: null)
+                 @*@Html.ActionLink("Hello " + ((Model.User.DisplayName!="")? Model.User.DisplayName:Model.User.UserPrincipalName )+ " !", "Index", "UserProfile", routeValues: null, htmlAttributes: null)*@
              </li>
             <li>
                 @Html.ActionLink("Sign out", "SignOut", "Account")
